package pt.ipp.isep.dei.esoft.project.domain;

public enum Roles {
    ADIMIN,AGENT,CLIENT,STOREMANAGER,OWNER,STORENETWORKMANAGER
}
